# eastereggs

./: .pre-commit-config.yaml  pyproject.toml
src/: main.py
src/process/: preprocess.py
tests/: test_blabla.py  test_process.py
